styles.css
:root {
    --box: #FFFFFF;
}

body {
    width: 90em;
    height: 217em;
    border: 1px;
    background-image: url("cd23f8b28866d711ecd55f7a1fe9e379146d9d6d.png");
    background-repeat: repeat;
    background-size: cover;
}

img {
    width: 12em;
    height: 14em;
    border-radius: 16px;
}

.Introduction {
    display: flex;
    width: 82em;
    height: 19em;
    border-radius: 1.8em;
    border: white;
    background-color: var(--box);
    border: 2px solid var(--box);
    padding: 20px;
    margin: 30px;
    border-radius: 24px;
}

.intro {
    display: inline-block;
    text-align: start;
}

.Proficiency {
    background-color: var(--box);
    width: 35em;
    height: 27em;
    gap: 0.6em;
    border-radius: 24px;
}

.Skills {
    background-color: var(--box);
    width: 44em;
    height: 27em;
    border: 2px solid var(--box);
    padding: 20px;
    margin: 30px;
    border-radius: 24px;
}

.Projects {
    background-color: var(--box);
    color: black;
    width: 82em;
    height: 47em;
    border-radius: 24px;
}

.Education {
    width: 62em;
    height: 53em;
    color: black;
    background-color: var(--box);
    border-radius: 24px;
}

.Tools {
    width: 19em;
    height: 53em;
    border-radius: 24px;
    background-color: var(--box);
}

/* Experience Section */

.Experience {
    width: 82em;
    height: 40em;
    border-radius: 24px;
    background-color: var(--box);
}

/* Experience Blocks Section */

.Experience-Block-Three {
    background-color: ghostwhite;
    border: 2px solid ghostwhite;
    border-radius: 16px;
    display: flex;
    padding-left: 20px;
}

.Experience-Block-Three-Left {
    display: inline-block;
}

.Experience-Block-Three-Right {
    display: inline-block;
}

footer {
    background-color: #D76239;
    width: 83em;
    height: 10em;
    border-radius: 24px;
    text-align: start;
    display: inline-block;
    padding-left: 30px;
    padding-bottom: 5px;
}

.message {
    color: var(--box);
}

.Contact {
    display: flex;
    flex-direction: row;
}

h4 {
    background-color: black;
    color: var(--box);
    border-radius: 8px;
    text-align: center;
}

.tools-box {
    background-color: lightgray;
    border-radius: 8px;
}

.vertical-line {
    border-left: 2px solid #bbb;
    height: 20px;
    display: inline-flex;
    margin: 0 10px;
}

.vertical-line-two {
    border-left: 2px solid black;
    height: 20px;
    display: inline-flex;
    margin: 0 10px;
}

button {
    background-color: #D76239;
    color: white;
    border: #D76239;
    border-radius: 8px;
}

.Contact {
    color: #bbb;
}

